fix code quality based on sonarqube feedback